[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "0.1.0"
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Wei Yang", email = "weiyang2048@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["click>=8.0.0", "streamlit>=1.0.0", "pandas>=1.2.0"]

[project.scripts]
inv-dash = "cli.dashboard:cli"

[project.urls]
Homepage = "https://github.com/weiyang2048/Investments"
Repository = "https://github.com/weiyang2048/Investments.git"
dashboard = "https://nowei-investment.streamlit.app/"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 150
