[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "0.1.0"
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Wei Yang", email = "weiyang2048@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "streamlit>=1.0.0",
    "pandas>=1.2.0",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.3",
    "scipy>=1.16.3",
    "duckdb>=1.4.1",
    "mstarpy>=7.0.1",
    "yfinance>=0.2.66",
    "robin-stocks>=3.4.0",
    "yahooquery>=2.4.1",
    "matplotlib>=3.10.7",
    "plotly>=6.3.1",
    "seaborn>=0.13.2",
    "folium>=0.20.0",
    "streamlit-folium>=0.25.3",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "country-converter>=1.3.2",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "loguru>=0.7.3",
    "pyhere>=1.0.3",
    "fear-and-greed>=0.4",
    "liquidity",
    "nbformat>=4.2.0",
]

[project.scripts]
inv-dash = "cli.dashboard:cli"
inv-port = "cli.portfolio:cli"

[project.urls]
Homepage = "https://github.com/weiyang2048/Investments"
Repository = "https://github.com/weiyang2048/Investments.git"
dashboard = "https://nowei-investment.streamlit.app/"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 150
